<resources>
    <string name="app_name">InvoiceApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invoice">Invoice</string>
    <string name="invoice_app">Invoice App</string>
    <string name="client">Client</string>
    <string name="date">Date</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="pincode">Pin code</string>
    <string name="product">Product</string>
    <string name="description">Description</string>
    <string name="save">save</string>
    <string name="hours">hours</string>
    <string name="price">price</string>
    <string name="create_invoice">Create Invoice</string>
    <string name="settings">Settings</string>
</resources>
